# psyai-chat

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  LICENSE  README.md  docker-compose.yml  poetry.toml  pyproject.toml  pytest.ini  requirements.txt
analysis/: forms.py  models.py  services.py  tasks.py  urls.py  views.py
analysis/migrations/: 0001_initial.py  0002_alter_imageanalysisresult_error_message.py
chat/: admin.py  consumers.py  models.py  routing.py  tasks.py  urls.py  views.py
chat/migrations/: 0001_initial.py
chat/services/: gpt_service.py
config/: asgi.py  celery.py  settings.py  urls.py
mocks/: apps.py  services.py  urls.py  views.py
payments/: admin.py  decorators.py  models.py  services.py  urls.py  views.py
payments/migrations/: 0001_initial.py  0002_alter_payment_yookassa_payment_id.py
templates/: base.html  home.html
templates/analysis/: analysis_form.html  analysis_result.html
templates/chat/: chat_history_detail.html  chat_history_list.html  chat_room.html
templates/mocks/: mock_payment.html  upload_image.html
templates/registration/: password_reset_email.html  password_reset_email.txt  password_reset_subject.txt
templates/users/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  profile.html  signup.html
tests/: test_integration.py  utils.py
tests/analysis/: test_services.py  test_tasks.py  test_views.py
tests/chat/: test_async_flow.py  test_consumers.py  test_tasks.py  test_views.py
tests/chat/services/: test_gpt_service.py
tests/mocks/: test_views.py
tests/payments/: test_views.py
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
